Tue Jun 20 20:02:57 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed mousebutton swapping option code. It was broken for
	certain combinations, now all seems well.
	* Found a use for ctrl+button1 for now, it just blurs/sharpens the
	image dynamically - for shits and giggles. It is somewhat spoiled
	by the fact that imlib2 currently doesn't seem to care what radius
	you pass to imlib_sharpen_image(), it always does the same thing.

Mon Jun 19 17:47:37 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added new background setting mode. "Set seamless." It's purdy.

Mon Jun 19 14:18:10 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Mwahaha. Now the window is resized when rotation starts (to fit
	the rotated image in). Also, checks are drawn properly behind the
	image, and rotation works well in combination with pan and zoom.
	* Now that all that's done, rotation is slow as shit ;) We'll see
	if we can speed that up next ;)

Sun Jun 18 21:49:35 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* No more eesh. We use E ipc properly now. IPC code pinched from
	Eterm - thanks KainX.

Sun Jun 18 19:38:02 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Zooming is mostly fixed now. Works much better. A few little
	tweaks and we'll be laughing :-)

Sun Jun 18 16:11:47 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* More menu styles. Remove your ~/.fehrc (let it regenerate) and
	run feh -t wood, feh -t aluminium or feh -t aqua to see them.

Sun Jun 18 14:53:17 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Better eesh availability determination, and a check that E is
	actually being used at the time, too ;)

Sun Jun 18 13:46:59 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Now feh will query eesh for the number of desktops a user
	has. If eesh is there, and there is more than one, the background
	setting menu will offer a choice of which desktop to set.

Sun Jun 18 03:47:58 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
