@@ -12,7 +12,7 @@ feh_SOURCES       = main.c getopt.c getopt1.c getopt.h feh.h \
 options.c options.h winwidget.c winwidget.h menu.c menu.h structs.h \
 filelist.c filelist.h multiwindow.c montage.c imlib.c index.c slideshow.c \
 utils.c utils.h keyevents.c timers.c timers.h list.c collage.c debug.h \
-events.c events.h feh_imlib2.h feh_imlib2.c support.c support.h
+events.c events.h feh_imlib2.h feh_imlib2.c support.c support.h thumbnail.c thumbnail.h
 feh_LDADD         = -lX11
 
 images_DATA = about.png menubg.png menubg_chrome.png menubg_brushed.png \
